Name:           HBlog
Version:        0.2
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Dark Daiver
Synopsis:       Primitive blog
Build-Type:     Simple

Executable Main
  Build-Depends:  base,
                  text ,
                  time ,
                  transformers ,
                  containers ,
                  scotty ,
                  persistent ,
                  persistent-sqlite ,
                  persistent-template ,
                  shakespeare,
                  shakespeare-text,
                  blaze-html,
                  MissingH 
  Main-Is:        Main.hs
  Hs-Source-Dirs: .
